[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/level_two/multiple_choice.gd" type="Script" id=1]
[ext_resource path="res://ui/basic_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/text_body.tres" type="Theme" id=3]
[ext_resource path="res://art/empty_64x64.png" type="Texture" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="multiple_choice" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="pop_up_window" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -299.5
margin_right = 512.0
margin_bottom = 299.5
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )

[node name="Panel" type="Panel" parent="pop_up_window"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -425.0
margin_top = -250.0
margin_right = 425.0
margin_bottom = 250.0

[node name="header" type="RichTextLabel" parent="pop_up_window/Panel"]
anchor_right = 1.0
margin_top = 80.0
margin_bottom = 111.0
theme = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Aurinkopaneelin tuottama sähkö, Wh[/center]"
text = "Aurinkopaneelin tuottama sähkö, Wh"

[node name="HBoxContainer" type="HBoxContainer" parent="pop_up_window/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -57.0
margin_right = 300.0
margin_bottom = 57.0
custom_constants/separation = 20
alignment = 1

[node name="answer_0" type="TextureButton" parent="pop_up_window/Panel/HBoxContainer"]
margin_left = 184.0
margin_top = 25.0
margin_right = 248.0
margin_bottom = 89.0
size_flags_vertical = 4
texture_normal = ExtResource( 4 )

[node name="selected" type="ColorRect" parent="pop_up_window/Panel/HBoxContainer/answer_0"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.545098, 0.67451, 0.0588235, 1 )

[node name="label" type="RichTextLabel" parent="pop_up_window/Panel/HBoxContainer/answer_0"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -11.5
margin_right = 32.0
margin_bottom = 11.5
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]20000[/center]"
text = "20000"
fit_content_height = true

[node name="answer_1" type="TextureButton" parent="pop_up_window/Panel/HBoxContainer"]
margin_left = 268.0
margin_top = 25.0
margin_right = 332.0
margin_bottom = 89.0
size_flags_vertical = 4
texture_normal = ExtResource( 4 )

[node name="selected" type="ColorRect" parent="pop_up_window/Panel/HBoxContainer/answer_1"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.545098, 0.67451, 0.0588235, 1 )

[node name="label" type="RichTextLabel" parent="pop_up_window/Panel/HBoxContainer/answer_1"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -11.5
margin_right = 32.0
margin_bottom = 11.5
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]20000[/center]"
text = "20000"
fit_content_height = true

[node name="answer_2" type="TextureButton" parent="pop_up_window/Panel/HBoxContainer"]
margin_left = 352.0
margin_top = 25.0
margin_right = 416.0
margin_bottom = 89.0
size_flags_vertical = 4
texture_normal = ExtResource( 4 )

[node name="selected" type="ColorRect" parent="pop_up_window/Panel/HBoxContainer/answer_2"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.545098, 0.67451, 0.0588235, 1 )

[node name="label" type="RichTextLabel" parent="pop_up_window/Panel/HBoxContainer/answer_2"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -11.5
margin_right = 32.0
margin_bottom = 11.5
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]20000[/center]"
text = "20000"
fit_content_height = true

[node name="evaluate" type="Button" parent="pop_up_window/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -66.5
margin_top = -89.0
margin_right = 66.5
margin_bottom = -49.0
theme = ExtResource( 3 )
text = "tarkista"

[connection signal="pressed" from="pop_up_window/Panel/HBoxContainer/answer_0" to="." method="_on_answer_0_pressed"]
[connection signal="pressed" from="pop_up_window/Panel/HBoxContainer/answer_1" to="." method="_on_answer_1_pressed"]
[connection signal="pressed" from="pop_up_window/Panel/HBoxContainer/answer_2" to="." method="_on_answer_2_pressed"]
[connection signal="pressed" from="pop_up_window/Panel/evaluate" to="." method="_on_evaluate_pressed"]
